Cleaning up the WebConfig for a public release. Removed portal files which weren't necessary for public release

--- a/CRMPortal/Web.config
+++ b/CRMPortal/Web.config
@@ -9,11 +9,11 @@
   <connectionStrings>
     <!-- Define the XRM server connection here. Always use the name="Xrm" -->
     <!-- See Here: http://msdn.microsoft.com/en-us/library/gg695810.aspx -->
-    <add name="Xrm" connectionString="Server=https://parature1cvg14.crm.dynamics.com; Username=brtubb@parature1cvg14.onmicrosoft.com; Password=pass@word1" />
+    <add name="Xrm" connectionString="Server={CRM Server Url}; Username={Username}; Password={Password}" />
   </connectionStrings>
   <microsoft.xrm.client>
     <contexts>
-      <add name="Xrm" type="Xrm.XrmServiceContext, WebAppWalkthrough" />
+      <add name="Xrm" type="Xrm.XrmServiceContext, Portal2Case" />
     </contexts>
     <services>
       <!-- This is a non-caching service. -->
@@ -45,26 +45,19 @@
       </controls>
     </pages>
     <customErrors mode="Off" />
-    <sessionState timeout="80" />
+    <sessionState timeout="10" /> <!-- Portal (jquery.p2c.js) will re-establish the Session using SSO if it terminates too early. -->
   </system.web>
-  <!-- To be used for configuration 
-      REMEMBER TO MODIFY THE /services Controllers!
-      They specify the CORS domain where requests are allowed _FROM_. 
-      Ensure it is the same as the portal. DNS masking will BREAK this integration.
-      
-      The agent-config.txt file (contents of which is in Global.Asax) stores the SSO password.
-      Provided file is NOT for production. Please ask Parature for an 'SP Adapter' for production use.
+  <!-- 
+      To be used for configuration of Portal2Case
   -->
   <appSettings>
-    <add key="vs:EnableBrowserLink" value="false" />
     <!-- Disable browserLink feature in VS2013. Weird results with SSO and debugging.-->
-    <!-- SSO -->
-    <add key="SSOstartLink" value="https://sso.parature.com/sp/startSSO.ping" />
-    <add key="SSOIdPLink" value="http://demo.parature.com/support/7797/7969/sso/idp/saml20" />
-    <!-- The OpenToken decoder splits the attributes into 'subject' and 'everything else'. The SAML subject is still in the 'everything else' so usually this is false. -->
-    <add key="SSOattribute" value="SAML_SUBJECT" /> <!-- SSO attribute to use. Generally the same as the contact record's email -->
+    <add key="vs:EnableBrowserLink" value="false" />
+    <!-- Insert SSO Configuration Here -->
+    <!-- CORS Configuration -->
+    <add key="CorsDomainAllowed" value="{Insert Portal Domain here}" />
     <!-- Field to use in CRM as the UID -->
-    <add key="CRMContactFieldLookup" value="emailaddress1" />
+    <add key="CRMContactFieldLookup" value="{crmAttribute}" />
     <!-- Entities in CRM accessible from the Portal -->
     <add key="CRMentity_read" value="incident" />
     <add key="CRMentity_create" value="incident" />
