--- a/CRMPortal/packages.config
+++ b/CRMPortal/packages.config
@@ -7,5 +7,11 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net451" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="6.1.1" targetFramework="net451" />
+  <package id="Microsoft.CrmSdk.Deployment" version="6.0.4" targetFramework="net451" />
+  <package id="Microsoft.CrmSdk.Extensions" version="6.0.4.1" targetFramework="net451" />
+  <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net451" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net451" />
+  <package id="WindowsAzure.ServiceBus" version="2.1.2.0" targetFramework="net451" />
 </packages>
