--- a/CRMPortal/Web.config
+++ b/CRMPortal/Web.config
@@ -52,12 +52,14 @@
   -->
   <appSettings>
     <!-- Disable browserLink feature in VS2013. Weird results with SSO and debugging.-->
-    <!-- Service Bus specific app setings for messaging connections --><add key="vs:EnableBrowserLink" value="false" />
+    <add key="vs:EnableBrowserLink" value="false" />
+    <!-- Service Bus specific app setings for messaging connections -->
+    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" />
     <!-- Insert SSO Configuration Here -->
     <!-- CORS Configuration -->
     <add key="CorsDomainAllowed" value="{Insert Portal Domain here}" />
-    <!-- Field to use in CRM as the UID -->
-    <add key="CRMContactFieldLookup" value="{crmAttribute}" />
+    <!-- Field to use in CRM as the UID (if not using the GUID) -->
+    <add key="CRMContactFieldLookup" value="{If not using the GUID for lookup, specify crm attribute logical names for retrieval}" />
     <!-- Entities in CRM accessible from the Portal -->
     <add key="CRMentity_read" value="incident" />
     <add key="CRMentity_create" value="incident" />
@@ -65,7 +67,7 @@
     <add key="CRMrelated_read" value="new_casecomments" />
     <add key="CRMrelated_create" value="new_casecomments" />
     <add key="CRMrelated_update" value="new_casecomments" />
-  <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" /></appSettings>
+  </appSettings>
   <common>
     <logging>
       <factoryAdapter type="Common.Logging.Simple.TraceLoggerFactoryAdapter, Common.Logging">
