--- a/CRMPortal/Portal2Case.csproj
+++ b/CRMPortal/Portal2Case.csproj
@@ -192,6 +192,7 @@
     <Content Include="portal\js\jquery.p2c.js" />
     <Content Include="portal\css\p2c_styling.css" />
     <None Include="portal\LinkingToPortal.md" />
+    <Content Include="startSSO.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -256,6 +257,13 @@
     </Compile>
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
+    </Compile>
+    <Compile Include="startSSO.aspx.cs">
+      <DependentUpon>startSSO.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="startSSO.aspx.designer.cs">
+      <DependentUpon>startSSO.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
