Shouldn't have an "s" at the end of the related entity

--- a/CRMPortal/Web.config
+++ b/CRMPortal/Web.config
@@ -62,9 +62,9 @@
     <add key="CRMentity_read" value="incident" />
     <add key="CRMentity_create" value="incident" />
     <add key="CRMentity_update" value="incident" />
-    <add key="CRMrelated_read" value="new_casecomments" />
-    <add key="CRMrelated_create" value="new_casecomments" />
-    <add key="CRMrelated_update" value="new_casecomments" />
+    <add key="CRMrelated_read" value="new_casecomment" />
+    <add key="CRMrelated_create" value="new_casecomment" />
+    <add key="CRMrelated_update" value="new_casecomment" />
   </appSettings>
   <common>
     <logging>
