--- a/CRMPortal/Web.config
+++ b/CRMPortal/Web.config
@@ -7,7 +7,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <!-- Define the XRM server connection here. Always use the name="Xrm" -->
+    <!-- Define the XRM server connection here. Always use the name="Xrm  -->
     <!-- See Here: http://msdn.microsoft.com/en-us/library/gg695810.aspx -->
     <add name="Xrm" connectionString="Server={CRM Server Url}; Username={Username}; Password={Password}" />
   </connectionStrings>
