--- a/CRMPortal/Web.config
+++ b/CRMPortal/Web.config
@@ -56,6 +56,7 @@
     <!-- Service Bus specific app setings for messaging connections -->
     <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" />
     <!-- Insert SSO Configuration Here -->
+    <add key="StartSsoLink" value="https://sso.parature.com/idp/startSSO.ping?PartnerSpId=http://btubb-samltesting.com"></add>
     <!-- CORS Configuration -->
     <add key="CorsDomainAllowed" value="{Insert Portal Domain here}" />
     <!-- Entities in CRM accessible from the Portal -->
